2003-06-15  Borut Razem <borut.razem@siol.net>

	* support/cpp2/sdcc.h: HAVE_DOS_BASED_FILE_SYSTEM defined for _WIN23
	* src/SDCC.lex: cloneXxx and copyAndFreeXxx functions for options and optimize stack handling
	* src/SDCCglobl.h, src/SDCCmain.c, src/ds390/main.c, src/mcs51/main.c, src/z80/main.c:
	fixed width array of pointers replaced with sets;
	multiple include and lib paths ared transferred to preprocessor and linker
	* src/SDCCset.c, src/SDCCset.h: added function setFromSetNonRev() and mergeSets()
	* src/SDCCsymt.c: reimplemented function inCalleeSaveList() by using sets instead
	fixed width array of pointers
	* src/SDCCutil.c, src/SDCCutil.h: added functions fputStrSet(), appendStrSet(), joinStrSet();
	removed functions addToList(), join(), joinn(), pathCharsEquivalent(), pathCharTransform(),
	fixupPath(), getPathDifference()
	* src/ds390/gen.c, src/mcs51/gen.c: reimplemented function  inExcludeList() by using sets instead
	fixed width array of pointers

2003-06-11  Bernhard Held <bernhard@bernhardheld.de>

	* src/pic16/ralloc.c: fix warnings
	* src/pic16/pcode.c: fix warning

2003-06-10  Scott Dattalo  <scott@dattalo.com>

	 Scott D. for Vangelis Rokas (vrokas@otenet.gr). I (scott) don't
	know all the details, but essentially this set of changes enable
	the pic16 port to generate movff instructions and generate assembler
	directives, 
	* src/SDCCmain.c: 
	* src/pic16/gen.c: 
	* src/pic16/glue.c:
	* src/pic16/pcode.c:
	* src/pic16/device.c:
	* src/pic16/main.c:
	* src/pic16/pcode.h:
	* src/pic16/pcoderegs.c:
	* src/pic16/ralloc.c:
	* src/pic16/ralloc.h:

2003-06-08  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* support/Util/SDCCerr.c, src/SDCCglobl.h, src/SDCCmain.c, doc/sdccman.lyx:
	added option --vc, so sdcc errors and warnings are compatible with 
	Microsoft Visual Studio.

2003-06-07  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* device/lib/_atof.c, device/lib/Makefile.in, device/include/stdlib.h,
	  device/lib/libfloat.lib: added atof function.
