@@ -1,3 +1,7 @@
+2003-06-18  Bernhard Held <bernhard@bernhardheld.de>
+
+	* support/Util/MySystem.c (merge_command): quick fix for Linux segfault with \"cmd\" arg
+
 2003-06-15  Borut Razem <borut.razem@siol.net>
 
 	* support/cpp2/sdcc.h: HAVE_DOS_BASED_FILE_SYSTEM defined for _WIN23
